# ai-engineering-library

./: .env.example  .eslintrc.json  .gitignore  30day-track.md  AI_Agents_Curriculum_Master_Prompt.md  CONTRIBUTING.md  FINANCE_SAFETY.md  HOW_TO_USE_AI_ASSISTANTS.md  LEARNER_READY_MATRIX.md  LICENSE  MIGRATION_COMMIT_PLAN.md  README.md  REFERENCE_AFTER_EFFORT.md  START_HERE.md  START_HERE_2_HOURS_PER_DAY.md  START_HERE_30_DAY_PROJECT_LAUNCH.md  TROUBLESHOOTING.md  chunk1.diff  conftest.py  package.json  pytest.ini  requirements.txt  tsconfig.json
_legacy/Python-Daily-Practice/: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  conftest.py  project-context.md  pyproject.toml
_legacy/Python-Daily-Practice/day-00-assessment/: README.md  test_assessment.py
_legacy/Python-Daily-Practice/week-01-the-foundation/day-01-variables-and-types/: README.md  conftest.py
_legacy/Python-Daily-Practice/week-01-the-foundation/day-02-strings-and-formatting/: conftest.py  solution_template.py
_legacy/Python-Daily-Practice/week-01-the-foundation/day-03-lists-and-tuples/: README.md  test_solution.py
_legacy/Python-Daily-Practice/week-01-the-foundation/day-04-dictionaries-and-sets/: README.md  solution_template.py
_legacy/Python-Daily-Practice/week-01-the-foundation/day-06-functions-and-scope/: README.md  solution_template.py  test_solution.py
_legacy/Python-Daily-Practice/week-01-the-foundation/day-07-weekly-project/: README.md  __init__.py  core.py  test_core.py  test_project.py
_legacy/Python-Daily-Practice/week-02-intermediate-python/: README.md
_legacy/Python-Daily-Practice/week-02-intermediate-python/day-08-error-handling/: README.md
_legacy/Python-Daily-Practice/week-02-intermediate-python/day-09-context-managers/: test_solution.py
_legacy/Python-Daily-Practice/week-02-intermediate-python/day-10-oop-classes-and-inheritance/: solution_template.py  test_solution.py
_legacy/Python-Daily-Practice/week-02-intermediate-python/day-11-magic-methods/: README.md  conftest.py  solution_template.py
_legacy/Python-Daily-Practice/week-02-intermediate-python/day-12-comprehensions-and-generators/: README.md  solution_template.py  test_solution.py
_legacy/Python-Daily-Practice/week-02-intermediate-python/day-13-unpacking-and-pythonic-patterns/: README.md  solution_template.py
_legacy/Python-Daily-Practice/week-02-intermediate-python/day-14-weekly-project/: README.md  core.py  main.py
infrastructure/: pyproject.toml
infrastructure/backend/: .env.example  Dockerfile  jest.config.js  package-lock.json  package.json  schema.prisma  tsconfig.json
infrastructure/backend/prisma/: schema.prisma  seed.js  seed.ts
infrastructure/backend/prisma/seeds/: index.ts  milestones.seed.ts  module0-content.seed.ts  modules.seed.ts
infrastructure/backend/src/: index.js  index.ts  swagger.ts
infrastructure/backend/src/middleware/: auth.middleware.ts
infrastructure/backend/src/routes/: api.routes.ts
infrastructure/backend/src/services/: analytics.service.ts  assessment.service.ts  code-execution.service.ts  content-versioning.service.ts  content-workflow.service.ts  content.service.ts  daily-content.service.ts  duration-calculation.service.ts  elasticsearch-service.ts  logger.service.ts  milestone.service.ts  monitoring.service.ts  portfolio.service.ts  progress.service.ts  redis-service.ts  review.service.ts  s3-service.ts  user.service.ts
infrastructure/backend/src/validation/: schemas.ts
infrastructure/backend/tests/: IMPLEMENTATION_COMPLETE.md  INTEGRATION_TESTS_SUMMARY.md  README.md  setup-test-env.ps1  setup-test-env.sh  setup.ts
infrastructure/backend/tests/integration/: assessment.test.ts  auth.test.ts  content-management.test.ts  content.test.ts  (+2 more)
infrastructure/docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  current-task-progress.md  turbo.json
infrastructure/frontend/: Dockerfile  TESTING_SETUP.md  package.json  test-new-components.bat  test-new-components.sh  vite.config.ts
infrastructure/frontend/public/: manifest.json  offline.html  service-worker.js
infrastructure/frontend/src/: App.tsx  main.tsx
infrastructure/kubernetes/: backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml
infrastructure/scripts/: seed-content.ts  update-tasks.js
infrastructure/shared/: types.ts
(+878 files in other folders)
